--- a/searchservice/src/main/resources/application.properties
+++ b/searchservice/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8087
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:database}:3306/gipams_db
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gipams_db
 spring.datasource.username=SEARCH_user
 spring.datasource.password=password
+
+#oauthserver.url= http://authentication-service:8080/auth/realms/MPEG-G/protocol/openid-connect/certs
+oauthserver.url= http://localhost:8080/auth/realms/MPEG-G/protocol/openid-connect/certs
+#gcs.url = http://gcs:8082
+gcs.url = http://localhost:8082
